--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/_ViewImports.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using PS.Phonebook.Web
 @using PS.Phonebook.Web.Models
+
+@using PS.Phonebook.Domain.Entities
+@using PS.Phonebook.Domain.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
