--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
@@ -14,10 +14,78 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Employee.FirstName)
+                @Html.DisplayNameFor(model => model.Employee.Organization.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Employee.Organization.Name)
+                @Html.DisplayNameFor(model => model.Employee.Organization.Organization1.Name)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Organization2.Name)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Organization3.Name)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Index)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Fax1)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Fax2)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.CodeAMTC)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Site)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Department.Name)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Subdivision.Name)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Position.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.Surname)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.FirstName)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Patronymic)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.FramePhoneCode)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.FramePhone)
+            </th>
+
+
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Phone1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Phone2)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.Organization.Phone3)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.SellularPhone1)
+            </th>
+             <th>
+                @Html.DisplayNameFor(model => model.Employee.SellularPhone2)
             </th>
             <th></th>
         </tr>
