Привожу Index в эстетический вид

--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
@@ -70,8 +70,6 @@
              <th>
                 @Html.DisplayNameFor(model => model.Employee.Organization.FramePhone)
             </th>
-
-
             <th>
                 @Html.DisplayNameFor(model => model.Employee.Organization.Phone1)
             </th>
@@ -93,12 +91,81 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Employee.FirstName)
-            </td>
-            <td>
+
+            <th>
                 @Html.DisplayFor(modelItem => item.Employee.Organization.Name)
-            </td>
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Organization1.Name)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Organization2.Name)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Organization3.Name)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Index)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Address)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Fax1)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Fax2)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.CodeAMTC)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Email)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Site)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Department.Name)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Subdivision.Name)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Position.Name)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Surname)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.FirstName)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Patronymic)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.FramePhoneCode)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.FramePhone)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Phone1)
+            </th>
+            <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Phone2)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.Organization.Phone3)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.SellularPhone1)
+            </th>
+             <th>
+                @Html.DisplayFor(modelItem => item.Employee.SellularPhone2)
+            </th>
+
+
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
