--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Create.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Create.cshtml
@@ -1,98 +1,119 @@
-﻿
-@model Unit
+﻿@model EmployeesPhonebookViewModel
 
 @{
     ViewData["Title"] = "Add";
 }
 
-<h1>Add</h1>
+<h1>Добавление</h1>
 
-<h4>Unit</h4>
 <hr />
 <div class="row">
     <div>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+            
 
             <div class="row">
 
+                <div class="row col-12 mb-5">
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.Index" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.Site" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                </div>
 
-                <div class="col-6">
 
-                    <div class="col-12">
-                        <div class="col-6">
-                            <div class="form-group"><label asp-for="Index" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+                <div class="row col-12 mb-3"> 
+
+                    <div class="col-6">
+                        <div class="form-group"><label asp-for="@Model.FirstName" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group"><label asp-for="@Model.Surname" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group"><label asp-for="@Model.Patronymic" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="form-group"><label asp-for="@Model.SellularPhone1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            </div>
+                             <div class="col-6">
+                                <div class="form-group"><label asp-for="@Model.SellularPhone2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            </div>
                         </div>
-                        <div class="col-6">
-                            <div class="form-group"><label asp-for="Index" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                        </div>
+
                     </div>
 
-                    <div class="col-4">
-                        <div class="form-group"><label asp-for="FirstName" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                        <div class="form-group"><label asp-for="LastName" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                        <div class="form-group"><label asp-for="Patronymic" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                    </div>
+                   
+                    <div class="row col-6">
 
-                    <div class="col-8">
                         <div class="col-12">
-                            <div class="form-group"><label asp-for="Organization" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+                            <div class="form-group"><label asp-for="@Model.OrganizationName" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
                         </div>
 
                         <div class="col-6">
-                            <div class="form-group"><label asp-for="Department" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="Subdivision" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="Position" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+                            <div class="form-group"><label asp-for="@Model.Department" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="form-group"><label asp-for="@Model.Subdivision" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="form-group"><label asp-for="@Model.Position" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
                         </div>
                         <div class="col-6">
-                            <div class="form-group"><label asp-for="Organization1" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="Organization2" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="Organization3" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+                            <div class="form-group"><label asp-for="@Model.Organization1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="form-group"><label asp-for="@Model.Organization2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="form-group"><label asp-for="@Model.Organization3" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
                         </div>
 
                     </div>
                 </div>
 
-                <hr />
 
-                <div class="col-6">
 
+                <div class="row col-12">
                     <div class="col-6">
-                        <div class="form-group"><label asp-for="SellularPhone1" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                        <div class="form-group"><label asp-for="SellularPhone2" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+                        <div class="form-group"><label asp-for="@Model.Address" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
                     </div>
-
                     <div class="col-6">
-                        <div class="form-group"><label asp-for="Address" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                        <div class="form-group"><label asp-for="Email" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+                        <div class="form-group"><label asp-for="@Model.Email" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
                     </div>
-
                 </div>
 
-                <div class="col-12">
-                    <div class="form-group"><label asp-for="CodeAMTC" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                    <div class="form-group"><label asp-for="FramePhoneCode" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                    <div class="form-group"><label asp-for="FramePhone" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                    <div class="form-group"><label asp-for="Phone1" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                    <div class="form-group"><label asp-for="Phone2" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                    <div class="form-group"><label asp-for="Phone3" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+                 <div class="row col-12">
+                    <div class="col-6">
+                        <div class="form-group"><label asp-for="@Model.Fax1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-group"><label asp-for="@Model.Fax2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
                 </div>
 
-                <div class="col-12">
-                    <div class="form-group"><label asp-for="Fax1" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                    <div class="form-group"><label asp-for="Fax2" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
+
+
+                <div class="row col-12">
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.CodeAMTC" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.FramePhoneCode" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.FramePhone" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.Phone1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.Phone2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group"><label asp-for="@Model.Phone3" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                    </div>
                 </div>
+
+                
+
+                
+
 
             </div>
-
-
-
-
-            <div class="form-group"><label asp-for="Name" class="control-label"></label><input asp-for="Name" class="form-control" /></div>
-                
-                
-            
 
 
 
@@ -108,5 +129,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
