--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Create.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Create.cshtml
@@ -12,54 +12,110 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            
+
 
             <div class="row">
 
                 <div class="row col-12 mb-5">
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.Index" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Index" class="control-label"></label>
+                            <input asp-for="@Model.Index" class="form-control" />
+                            <span asp-validation-for="@Model.Index" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.Site" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Site" class="control-label"></label>
+                            <input asp-for="@Model.Site" class="form-control" />
+                            <span asp-validation-for="@Model.Site" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
 
 
-                <div class="row col-12 mb-3"> 
+                <div class="row col-12 mb-3">
 
                     <div class="col-6">
-                        <div class="form-group"><label asp-for="@Model.FirstName" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
-                        <div class="form-group"><label asp-for="@Model.Surname" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
-                        <div class="form-group"><label asp-for="@Model.Patronymic" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.FirstName" class="control-label"></label>
+                            <input asp-for="@Model.FirstName" class="form-control" />
+                            <span asp-validation-for="@Model.FirstName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Surname" class="control-label"></label>
+                            <input asp-for="@Model.Surname" class="form-control" />
+                            <span asp-validation-for="@Model.Surname" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Patronymic" class="control-label"></label>
+                            <input asp-for="@Model.Patronymic" class="form-control" />
+                            <span asp-validation-for="@Model.Patronymic" class="text-danger"></span>
+                        </div>
 
                         <div class="row">
                             <div class="col-6">
-                                <div class="form-group"><label asp-for="@Model.SellularPhone1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                                <div class="form-group">
+                                    <label asp-for="@Model.SellularPhone1" class="control-label"></label>
+                                    <input asp-for="@Model.SellularPhone1" class="form-control" />
+                                    <span asp-validation-for="@Model.SellularPhone1" class="text-danger"></span>
+                                </div>
                             </div>
-                             <div class="col-6">
-                                <div class="form-group"><label asp-for="@Model.SellularPhone2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label asp-for="@Model.SellularPhone2" class="control-label"></label>
+                                    <input asp-for="@Model.SellularPhone2" class="form-control" />
+                                    <span asp-validation-for="@Model.SellularPhone2" class="text-danger"></span>
+                                </div>
                             </div>
                         </div>
 
                     </div>
 
-                   
+
                     <div class="row col-6">
 
                         <div class="col-12">
-                            <div class="form-group"><label asp-for="@Model.OrganizationName" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="form-group">
+                                <label asp-for="@Model.OrganizationName" class="control-label"></label>
+                                <input asp-for="@Model.OrganizationName" class="form-control" />
+                                <span asp-validation-for="@Model.OrganizationName" class="text-danger"></span>
+                            </div>
                         </div>
 
                         <div class="col-6">
-                            <div class="form-group"><label asp-for="@Model.Department" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="@Model.Subdivision" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="@Model.Position" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="form-group">
+                                <label asp-for="@Model.Department" class="control-label"></label>
+                                <input asp-for="@Model.Department" class="form-control" />
+                                <span asp-validation-for="@Model.Department" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="@Model.Subdivision" class="control-label"></label>
+                                <input asp-for="@Model.Subdivision" class="form-control" />
+                                <span asp-validation-for="@Model.Subdivision" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="@Model.Position" class="control-label"></label>
+                                <input asp-for="@Model.Position" class="form-control" />
+                                <span asp-validation-for="@Model.Position" class="text-danger"></span>
+                            </div>
                         </div>
                         <div class="col-6">
-                            <div class="form-group"><label asp-for="@Model.Organization1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="@Model.Organization2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
-                            <div class="form-group"><label asp-for="@Model.Organization3" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                            <div class="form-group">
+                                <label asp-for="@Model.Organization1" class="control-label"></label>
+                                <input asp-for="@Model.Organization1" class="form-control" />
+                                <span asp-validation-for="@Model.Organization1" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="@Model.Organization2" class="control-label"></label>
+                                <input asp-for="@Model.Organization2" class="form-control" />
+                                <span asp-validation-for="@Model.Organization2" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="@Model.Organization3" class="control-label"></label>
+                                <input asp-for="@Model.Organization3" class="form-control" />
+                                <span asp-validation-for="@Model.Organization3" class="text-danger"></span>
+                            </div>
                         </div>
 
                     </div>
@@ -69,19 +125,35 @@
 
                 <div class="row col-12">
                     <div class="col-6">
-                        <div class="form-group"><label asp-for="@Model.Address" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Address" class="control-label"></label>
+                            <input asp-for="@Model.Address" class="form-control" />
+                            <span asp-validation-for="@Model.Address" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col-6">
-                        <div class="form-group"><label asp-for="@Model.Email" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Email" class="control-label"></label>
+                            <input asp-for="@Model.Email" class="form-control" />
+                            <span asp-validation-for="@Model.Email" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
 
-                 <div class="row col-12">
+                <div class="row col-12">
                     <div class="col-6">
-                        <div class="form-group"><label asp-for="@Model.Fax1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Fax1" class="control-label"></label>
+                            <input asp-for="@Model.Fax1" class="form-control" />
+                            <span asp-validation-for="@Model.Fax1" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col-6">
-                        <div class="form-group"><label asp-for="@Model.Fax2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Fax2" class="control-label"></label>
+                            <input asp-for="@Model.Fax2" class="form-control" />
+                            <span asp-validation-for="@Model.Fax2" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
 
@@ -89,30 +161,48 @@
 
                 <div class="row col-12">
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.CodeAMTC" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.CodeAMTC" class="control-label"></label>
+                            <input asp-for="@Model.CodeAMTC" class="form-control" />
+                            <span asp-validation-for="@Model.CodeAMTC" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.FramePhoneCode" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.FramePhoneCode" class="control-label"></label>
+                            <input asp-for="@Model.FramePhoneCode" class="form-control" />
+                            <span asp-validation-for="@Model.FramePhoneCode" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.FramePhone" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.FramePhone" class="control-label"></label>
+                            <input asp-for="@Model.FramePhone" class="form-control" />
+                            <span asp-validation-for="@Model.FramePhone" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.Phone1" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Phone1" class="control-label"></label>
+                            <input asp-for="@Model.Phone1" class="form-control" />
+                            <span asp-validation-for="@Model.Phone1" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.Phone2" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Phone2" class="control-label"></label>
+                            <input asp-for="@Model.Phone2" class="form-control" />
+                            <span asp-validation-for="@Model.Phone2" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="form-group"><label asp-for="@Model.Phone3" class="control-label"></label><input asp-for="@Model.FirstName" class="form-control" /></div>
+                        <div class="form-group">
+                            <label asp-for="@Model.Phone3" class="control-label"></label>
+                            <input asp-for="@Model.Phone3" class="form-control" />
+                            <span asp-validation-for="@Model.Phone3" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-
-                
-
-                
-
-
             </div>
 
 
