--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Edit.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Edit.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Редактирование</h1>
 
-<h4>Unit</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
