Представление Delete реализовано

--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Delete.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Delete.cshtml
@@ -11,18 +11,78 @@
     <h4>Unit</h4>
     <hr />
      <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrganizationName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrganizationName)
-        </dd>
+        
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.OrganizationName)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.OrganizationName)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Organization1)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Organization1)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Organization2)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Organization2)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Organization3)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Organization3)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Index)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Index)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Address)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Address)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Fax1)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Fax1)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Fax2)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Fax2)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.CodeAMTC)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.CodeAMTC)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Email)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Site)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Site)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Department)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Department)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Subdivision)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Subdivision)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Position)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Position)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Surname)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Surname)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.FirstName)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.FirstName)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Patronymic)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Patronymic)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.FramePhoneCode)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.FramePhoneCode)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.FramePhone)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.FramePhone)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Phone1)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Phone1)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Phone2)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Phone2)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.Phone3)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Phone3)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.SellularPhone1)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.SellularPhone1)</dd>
+		
+        <dt class="col-sm-2">@Html.DisplayNameFor(model =>model.SellularPhone2)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.SellularPhone2)</dd>
     </dl>
     
     <form asp-action="Delete">
