--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
@@ -7,9 +7,21 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="row col-12">
+    <div class="col">
+        <form class="form-inline" asp-action="Create">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Create New</button>
+        </form>
+    </div>
+
+    <div class="col justify-content-end">
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</div>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr>
