--- a/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
+++ b/src/PS.Phonebook/PS.Phonebook.Web/Views/Phonebook/Index.cshtml
@@ -1,32 +1,43 @@
-﻿
+﻿@using PS.Phonebook.Service.Infrastructure
+
 @model IEnumerable<EmployeesPhonebook>
 
 @{
     ViewData["Title"] = "Index";
+    SortModel sortModel = (SortModel)ViewData["SortModel"];
 }
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 
 <h1>Index</h1>
 
-<div class="row col-12">
-    <div class="col">
+  <div class="col">
         <form class="form-inline" asp-action="Create">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Create New</button>
         </form>
     </div>
 
-    <div class="col justify-content-end">
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
+
+<div class="col-4 p-0 justify-content-end mt-1">
+    <form asp-controller="PhonebookController" asp-action="Index">
+        <span class="btn-group">
+            <input class="form-control" type="text" name="searchText" value="@ViewBag.SearchText" placeholder="Search Key"/>
+            <input class="btn-sm btn-danger p-1 ml-2 btn" type="submit" value="Search" style="border-radius:10px;" />
+        </span>
+    </form>
 </div>
 
 <table class="table table-striped table-hover">
     <thead>
         <tr>
 
-            <th scope="col">@Html.DisplayNameFor(model => model.Employee.Organization.Name)</th>
+             <th scope="col">
+             <i class="@sortModel.GetColumn("companyName").SortIcon" arial-heddern="true"></i>
+                <a asp-action="Index" asp-route-sortExpression="@sortModel.GetColumn("companyName").SortExpression">
+                    @Html.DisplayNameFor(model => model.Employee.Organization.Name)
+                </a>
+            </th>
+
+
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Organization.Organization1.Name)</th>
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Organization.Organization2.Name)</th>
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Organization.Organization3.Name)</th>
@@ -41,7 +52,14 @@
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Organization.Subdivision.Name)</th>
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Position.Name)</th>
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Surname)</th>
-            <th scope="col">@Html.DisplayNameFor(model => model.Employee.FirstName)</th>
+
+             <th scope="col">
+             <i class="@sortModel.GetColumn("employeName").SortIcon" arial-heddern="true"></i>
+                <a asp-action="Index" asp-route-sortExpression="@sortModel.GetColumn("employeName").SortExpression">
+                    @Html.DisplayNameFor(model => model.Employee.FirstName)
+                </a>
+            </th>
+
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Patronymic)</th>
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Organization.FramePhoneCode)</th>
             <th scope="col">@Html.DisplayNameFor(model => model.Employee.Organization.FramePhone)</th>
